<resources>
    <!--标题-->
    <string name="app_name">喽相册</string>
    <string name="PhotoAlbumActivity_name">相册们</string>

    <!-- 网络相关 -->
    <string name="json_code_error">json_code格式不正确</string>
    <string name="json_message_error">json_message格式不正确</string>

    <!--登陆相关-->
    <string name="account">账号</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="input_account">请输入账户</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_failed">登录失败(用户名不存在或密码不正确)</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败(用户名已被注册)</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <!--提示-->
    <string name="splash_1">前方高能</string>
    <string name="splash_2">相册很</string>
    <string name="splash_3">low</string>
    <string name="top_title_name">当前内容名称</string>
    <string name="photo_album_name">相册名</string>
    <string name="photo_to_edge">滑不动了</string>
    <string name="confirm_logout">Are you 确定退出?</string>
    <string name="register_fail">请填写相关内容以完成注册</string>
    <string name="add_comment_for_album">添加对相册的评论</string>
    <string name="show_more_menu_items">弹出更多菜单</string>

    <!--新增相册-->
    <string name="add_photo_album_success">相册新建成功</string>
    <string name="add_photo_album_fail">相册新建失败</string>

    <!--个人主页-->
    <string name="user_center">个人主页</string>
    <string name="nick_name">昵称</string>
    <string name="personal_album">个人相册</string>
    <string name="edit">编辑信息</string>
    <string name="logout">退出登录</string>

    <!--Exceptions-->
    <string name="photoAlbum_parse_error">相册数据解析错误</string>

    <!-- 相册相关-->
    <string name="photoAlbum_name">相册名</string>
    <string name="photoAlbum_is_public">是否公开</string>
    <string name="photoAlbum_add">新增</string>
    <string name="photoAlbum_insert_album_name">请输入相册名</string>
    <string name="photoAlbum_public">公开</string>
    <string name="photoAlbum_private">不公开</string>
    <string name="photoAlbum_set_cover">将此照片设置为封面?</string>

    <!-- 网络请求-->
    <string name="net_request_failure">网络请求失败</string>

    <!-- 新增相片-->
    <string name="add_new_photo">确定上传这张?</string>

    <!--长按菜单-->
    <string name="delete_photo_album">删除该相册?</string>

    <!--评论-->
    <string name="comment_hint">请输入评论</string>
    <string name="comment_commit">评论</string>
    <string name="comment_user_name">评论人</string>
    <string name="comment_content">评论内容</string>
    <string name="comment_time">评论时间</string>
    <string name="comment_failure">评论失败</string>
    <string name="delete_comment">删除评论?</string>
    <string name="delete_other_people_comment">不能删除别人的评论</string>
    <string name="delete_successfully">删除成功</string>
    <string name="delete_failure">删除失败</string>

    <!--长按菜单-->
    <string name="context_menu_set_cover">设置封面</string>
    <string name="context_menu_delete">删除</string>
    <string name="context_menu_download">下载</string>

    <!--投票-->
    <string name="vote_tip">请投票,这张照片您想投几票?</string>

    <!--修改信息-->
    <string name="edit_nickname">请输入新账号名</string>
    <string name="edit_old_password">请输入旧密码</string>
    <string name="edit_password">请输入新密码</string>
    <string name="edit_confirm_password">请再次输入新密码</string>
    <string name="edit_tips">请确保两次密码输入一致</string>
    <string name="edit_success">修改成功</string>
    <string name="edit_failure">修改失败</string>
</resources>
