<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/gap_10"
              android:orientation="vertical"
              android:padding="@dimen/gap_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_5">

        <TextView
            android:id="@+id/comment_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_user_name"
            android:textColor="@color/color3"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@+id/comment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/comment_time"
            android:textColor="@color/color3"
            android:textSize="@dimen/font_15"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/comment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gap_20"
        android:layout_marginStart="@dimen/gap_20"
        android:text="@string/comment_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/gap_1"
        android:layout_marginTop="@dimen/gap_10"
        android:background="@color/color5"/>

</LinearLayout>