<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color12"
    android:orientation="vertical">

    <include
        android:id="@+id/top"
        layout="@layout/top_layout" />

    <RelativeLayout
        android:id="@+id/user_info_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginTop="@dimen/gap_10"
        android:background="@color/color11"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/gap_10">

        <com.lujianzhi.photoalbum.view.RoundImageView
            android:id="@+id/user_portrait"
            android:layout_width="@dimen/gap_70"
            android:layout_height="@dimen/gap_70"
            android:src="@drawable/photo" />


        <TextView
            android:id="@+id/nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_10"
            android:layout_marginTop="@dimen/gap_10"
            android:layout_toRightOf="@id/user_portrait"
            android:text="@string/nick_name"
            android:textSize="@dimen/font_20" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nick_name"
            android:layout_marginLeft="@dimen/gap_10"
            android:layout_marginTop="@dimen/gap_5"
            android:layout_toRightOf="@id/user_portrait"
            android:text="@string/phone_number"
            android:textColor="@color/color16"
            android:textSize="@dimen/font_14" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/edit_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_info_area"
        android:layout_marginTop="@dimen/gap_20"
        android:background="@color/color11"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/gap_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_15"
            android:text="@string/edit"
            android:textSize="@dimen/font_20" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_area"
        android:layout_marginTop="@dimen/gap_1"
        android:background="@color/color11"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/gap_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_15"
            android:text="@string/logout"
            android:textSize="@dimen/font_20" />

    </LinearLayout>


</RelativeLayout>